--- a/src/Components/PlantCard.css
+++ b/src/Components/PlantCard.css
@@ -1,9 +1,15 @@
+
+
+
+
 .PlantCard{
     border: 2px solid black;
-    margin: 10px;
-    padding: 10px 100px;
+    margin: 10px 0px;
+    padding: 10px 20px;
     border-radius: 10px;
     position: relative;
+    background-color: aquamarine;
+    width: 600px;
   
 }
 
@@ -14,7 +20,7 @@
 
     font-size: 20px;
     font-weight: 400;
-margin: 20px;
+
 
 }
 
@@ -23,6 +29,11 @@ margin: 20px;
     position: relative;
 }
 .plant-image{
+    margin-top: 10px;
+  
     position: absolute;
-    right: 50px;
+    right: 0px;
+    height: 150px;
+    width: 150px;
+    border-radius: 5px;
 }
