--- a/src/Views/Home/Home.css
+++ b/src/Views/Home/Home.css
@@ -1,4 +1,16 @@
 .PlantCard-div{
-
-   margin: auto 50px;
+   display: flex;
+   flex-wrap: wrap;
+   flex-direction: row;
+   margin: auto ;
+   justify-content: space-evenly;
+}
+.brand-name{
+  align-items: center;
+  text-align: center;
+border-radius: 10px;
+  background-color: aqua;
+  width: 350px;
+  margin:10px auto;
+   
 }
