--- a/src/Components/PlantCard.css
+++ b/src/Components/PlantCard.css
@@ -37,3 +37,11 @@
     width: 150px;
     border-radius: 5px;
 }
+
+.plant-card-action-btn{
+  margin: 20px;
+  padding: 10px;
+  background-color: #000;
+  color: #fff;
+  border-radius: 10px;
+}
