--- a/src/Views/Home/Home.css
+++ b/src/Views/Home/Home.css
@@ -4,13 +4,22 @@
    flex-direction: row;
    margin: auto ;
    justify-content: space-evenly;
+   position: absolute;
+
 }
 .brand-name{
   align-items: center;
   text-align: center;
 border-radius: 10px;
-  background-color: aqua;
+  background-color: aquamarine;
   width: 350px;
   margin:10px auto;
    
+}
+.add-btn{
+  width: 70px;
+  position: fixed;
+  right: 15px;
+  bottom: 15px;
+  z-index: 10;
 }
